--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,7 +4,7 @@ title: "Page not found"
 layout: single
 excerpt: "Page not found, I'm sorry it's not included!"
 sitemap: false
-permalink: /404.html
+permalink: /404.md
 
 ---
 
